--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "bootstrap-vue": "^1.0.2",
     "vue": "^2.5.2",
     "vue-cookie": "^1.1.4",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue2-google-maps": "^0.8.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
