data configured and shown

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "^1.0.2",
+    "chart.js": "^2.7.1",
     "vue": "^2.5.2",
+    "vue-chartjs": "^3.0.2",
     "vue-cookie": "^1.1.4",
     "vue-router": "^3.0.1",
     "vue2-google-maps": "^0.8.4"
