--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "presets": [
     ["env", {
-      "modules": false,
+      "modules": "commonjs",
       "targets": {
         "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
       }
@@ -9,6 +9,7 @@
     "stage-2"
   ],
   "plugins": ["transform-runtime"],
+  "plugins": ["transform-es2015-modules-commonjs"],
   "env": {
     "test": {
       "presets": ["env", "stage-2"],
