--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "^1.0.2",
     "chart.js": "^2.7.1",
+    "rrd4j-js": "^2.0.1",
     "vue": "^2.5.2",
     "vue-chartjs": "^3.0.2",
     "vue-cookie": "^1.1.4",
