--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "font-awesome": "^4.7.0",
     "moment": "^2.19.2",
     "rrd4j-js": "^2.0.1",
+    "vee-validate": "^2.0.0-rc.25",
     "vue": "^2.5.2",
     "vue-chartjs": "^3.0.2",
     "vue-cookie": "^1.1.4",
