--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,12 @@ node_js:
 cache:
   directories:
     - "node_modules"
-    
+
+before_install:
+  - gem install package_cloud
+
 script:
   - npm run build
   - npm test
+  - ./build-debian.sh
+  - package_cloud push dernasherbrezon/r2cloud/raspbian/stretch *.deb
