--- a/debian/DEBIAN/control
+++ b/debian/DEBIAN/control
@@ -1,6 +1,7 @@
 Package: r2cloud-ui
 Section: embedded
 Priority: standard
+Homepage: https://github.com/dernasherbrezon/r2cloud-ui
 Architecture: armhf
 Maintainer: Andrey Rodionov <info@r2cloud.ru>
 Description: r2cloud ui
