--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit",
+    "test": "npm run unit --no-update-notifier",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
@@ -21,7 +21,7 @@
     "font-awesome": "4.7.0",
     "moment": "2.21.0",
     "rrd4j-js": "2.0.1",
-    "vee-validate": "2.0.0-rc.25",
+    "vee-validate": "2.0.9",
     "vue": "2.5.2",
     "vue-chartjs": "3.0.2",
     "vue-cookie": "1.1.4",
@@ -29,6 +29,7 @@
     "vue2-google-maps": "0.8.4"
   },
   "devDependencies": {
+    "@vue/test-utils": "1.0.0-beta.24",
     "autoprefixer": "7.1.2",
     "babel-core": "6.22.1",
     "babel-eslint": "7.1.1",
@@ -61,6 +62,7 @@
     "extract-text-webpack-plugin": "3.0.0",
     "favicons-webpack-plugin": "0.0.7",
     "file-loader": "1.1.4",
+    "flush-promises": "^1.0.0",
     "friendly-errors-webpack-plugin": "1.6.1",
     "html-webpack-plugin": "2.30.1",
     "http-proxy-middleware": "0.17.3",
@@ -75,6 +77,7 @@
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "2.0.2",
     "mocha": "3.2.0",
+    "moxios": "^0.4.0",
     "nightwatch": "0.9.12",
     "opn": "5.1.0",
     "optimize-css-assets-webpack-plugin": "3.2.0",
