--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "vue": "2.5.2",
     "vue-chartjs": "3.0.2",
     "vue-cookie": "1.1.4",
-    "vue-router": "3.0.1",
-    "vue2-google-maps": "0.8.4"
+    "vue-router": "3.0.1"
   },
   "devDependencies": {
     "@vue/test-utils": "1.0.0-beta.24",
