--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ script:
   - set -e
   - npm run build
   - npm test
-  - sh build-debian.sh
+  - if [[ $TRAVIS_BRANCH == 'master' ]]; then sh build-debian.sh; fi
