--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
   },
   "dependencies": {
     "axios": "0.18.1",
-    "bootstrap": "4.0.0-beta.2",
-    "bootstrap-vue": "1.0.2",
+    "bootstrap": "4.3.1",
+    "bootstrap-vue": "2.1.0",
     "chart.js": "2.7.1",
     "font-awesome": "4.7.0",
     "moment": "2.21.0",
     "rrd4j-js": "2.0.1",
     "vee-validate": "2.0.9",
-    "vue": "2.5.2",
+    "vue": "2.6.10",
     "vue-chartjs": "3.0.2",
     "vue-cookie": "1.1.4",
+    "vue-openapi-bootstrap": "1.0.1",
     "vue-router": "3.0.1"
   },
   "devDependencies": {
