--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "extract-text-webpack-plugin": "3.0.0",
     "favicons-webpack-plugin": "0.0.7",
     "file-loader": "1.1.4",
-    "flush-promises": "^1.0.0",
+    "flush-promises": "1.0.0",
     "friendly-errors-webpack-plugin": "1.6.1",
     "html-webpack-plugin": "2.30.1",
     "http-proxy-middleware": "0.17.3",
@@ -77,7 +77,7 @@
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "2.0.2",
     "mocha": "3.2.0",
-    "moxios": "^0.4.0",
+    "moxios": "0.4.0",
     "nightwatch": "0.9.12",
     "opn": "5.1.0",
     "optimize-css-assets-webpack-plugin": "3.2.0",
@@ -93,7 +93,7 @@
     "url-loader": "0.5.8",
     "vue-loader": "13.3.0",
     "vue-style-loader": "3.0.1",
-    "vue-template-compiler": "2.5.2",
+    "vue-template-compiler": "2.6.10",
     "webpack": "3.6.0",
     "webpack-bundle-analyzer": "3.3.2",
     "webpack-dev-middleware": "1.12.0",
