draw polar plot

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "font-awesome": "4.7.0",
     "moment": "2.21.0",
     "rrd4j-js": "2.0.1",
+    "satellite.js": "4.0.0",
     "vee-validate": "2.0.9",
     "vue": "2.6.10",
     "vue-chartjs": "3.0.2",
