--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "bootstrap": "4.3.1",
     "bootstrap-vue": "2.1.0",
     "chart.js": "2.9.4",
+    "d3": "7.4.4",
     "font-awesome": "4.7.0",
     "moment": "2.21.0",
     "rrd4j-js": "2.0.1",
     "satellite.js": "4.0.0",
+    "topojson-client": "^3.1.0",
     "vee-validate": "2.0.9",
     "vue": "2.6.10",
     "vue-chartjs": "3.0.2",
