--- a/package.json
+++ b/package.json
@@ -93,6 +93,8 @@
     "shelljs": "0.7.6",
     "sinon": "4.0.0",
     "sinon-chai": "2.8.0",
+    "uglify-js": "3.15.4",
+    "uglifyjs-webpack-plugin": "1.0.0",
     "url-loader": "0.5.8",
     "vue-loader": "13.3.0",
     "vue-style-loader": "3.0.1",
