--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "bootstrap": "4.3.1",
     "bootstrap-vue": "2.1.0",
     "chart.js": "2.9.4",
-    "d3": "7.4.4",
+    "d3": "5.16.0",
     "font-awesome": "4.7.0",
     "moment": "2.21.0",
     "rrd4j-js": "2.0.1",
@@ -70,11 +70,11 @@
     "html-webpack-plugin": "2.30.1",
     "http-proxy-middleware": "0.17.3",
     "inject-loader": "3.0.0",
-    "karma": "1.4.1",
+    "karma": "^6.3.19",
     "karma-coverage": "1.1.1",
     "karma-mocha": "1.3.0",
-    "karma-phantomjs-launcher": "1.0.2",
-    "karma-phantomjs-shim": "1.4.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-phantomjs-shim": "^1.5.0",
     "karma-sinon-chai": "1.3.1",
     "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.31",
