--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,9 +42,11 @@ jobs:
     - name: Deploy
       if: github.ref == 'refs/heads/master'
       run: |
+        set -e
         DATE=$(date '+%Y%m%d%H%M%S')
         echo "Version: ${DATE}" >> debian/DEBIAN/control
         dpkg-deb --build debian r2cloud-ui-${DATE}.deb
+        mkdir -p ~/.m2/repository/
         [[ -f ~/.m2/repository/apt-cli-1.6.jar ]] || wget --no-clobber --quiet -O ~/.m2/repository/apt-cli-1.6.jar https://github.com/dernasherbrezon/apt-cli/releases/download/apt-cli-1.6/apt-cli.jar
         java -jar ~/.m2/repository/apt-cli-1.6.jar --url s3://r2cloud --component main --codename r2cloud --gpg-keyname F2DCBFDCA5A70917  save --patterns ./*.deb
         java -jar ~/.m2/repository/apt-cli-1.6.jar --url s3://r2cloud --component main --codename stretch --gpg-keyname F2DCBFDCA5A70917  save --patterns ./*.deb
