--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,15 +44,16 @@ jobs:
       run: |
         set -e
         DATE=$(date '+%Y%m%d%H%M%S')
+        APT_CLI_VERSION="1.8"
         echo "Version: ${DATE}" >> debian/DEBIAN/control
         dpkg-deb --build debian r2cloud-ui-${DATE}.deb
         mkdir -p ~/.m2/repository/
-        [[ -f ~/.m2/repository/apt-cli-1.7.jar ]] || wget --no-clobber --quiet -O ~/.m2/repository/apt-cli-1.7.jar https://github.com/dernasherbrezon/apt-cli/releases/download/apt-cli-1.6/apt-cli.jar
-        java -jar ~/.m2/repository/apt-cli-1.7.jar --url s3://r2cloud --component main --codename r2cloud --gpg-keyname F2DCBFDCA5A70917  save --patterns ./*.deb
-        java -jar ~/.m2/repository/apt-cli-1.7.jar --url s3://r2cloud --component main --codename stretch --gpg-keyname F2DCBFDCA5A70917  save --patterns ./*.deb
-        java -jar ~/.m2/repository/apt-cli-1.7.jar --url s3://r2cloud --component main --codename buster --gpg-keyname F2DCBFDCA5A70917  save --patterns ./*.deb
-        java -jar ~/.m2/repository/apt-cli-1.7.jar --url s3://r2cloud --component main --codename bullseye --gpg-keyname F2DCBFDCA5A70917  save --patterns ./*.deb
-        java -jar ~/.m2/repository/apt-cli-1.7.jar --url s3://r2cloud --component main --codename bookworm --gpg-keyname F2DCBFDCA5A70917  save --patterns ./*.deb
-        java -jar ~/.m2/repository/apt-cli-1.7.jar --url s3://r2cloud --component main --codename bionic --gpg-keyname F2DCBFDCA5A70917  save --patterns ./*.deb
-        java -jar ~/.m2/repository/apt-cli-1.7.jar --url s3://r2cloud --component main --codename focal --gpg-keyname F2DCBFDCA5A70917   save --patterns ./*.deb
-        java -jar ~/.m2/repository/apt-cli-1.7.jar --url s3://r2cloud --component main --codename jammy --gpg-keyname F2DCBFDCA5A70917   save --patterns ./*.deb
+        [[ -f ~/.m2/repository/apt-cli-${APT_CLI_VERSION}.jar ]] || wget --no-clobber --quiet -O ~/.m2/repository/apt-cli-${APT_CLI_VERSION}.jar https://github.com/dernasherbrezon/apt-cli/releases/download/apt-cli-${APT_CLI_VERSION}/apt-cli.jar
+        java -jar ~/.m2/repository/apt-cli-${APT_CLI_VERSION}.jar --url s3://r2cloud --component main --codename r2cloud --gpg-keyname F2DCBFDCA5A70917  save --patterns ./*.deb
+        java -jar ~/.m2/repository/apt-cli-${APT_CLI_VERSION}.jar --url s3://r2cloud --component main --codename stretch --gpg-keyname F2DCBFDCA5A70917  save --patterns ./*.deb
+        java -jar ~/.m2/repository/apt-cli-${APT_CLI_VERSION}.jar --url s3://r2cloud --component main --codename buster --gpg-keyname F2DCBFDCA5A70917  save --patterns ./*.deb
+        java -jar ~/.m2/repository/apt-cli-${APT_CLI_VERSION}.jar --url s3://r2cloud --component main --codename bullseye --gpg-keyname F2DCBFDCA5A70917  save --patterns ./*.deb
+        java -jar ~/.m2/repository/apt-cli-${APT_CLI_VERSION}.jar --url s3://r2cloud --component main --codename bookworm --gpg-keyname F2DCBFDCA5A70917  save --patterns ./*.deb
+        java -jar ~/.m2/repository/apt-cli-${APT_CLI_VERSION}.jar --url s3://r2cloud --component main --codename bionic --gpg-keyname F2DCBFDCA5A70917  save --patterns ./*.deb
+        java -jar ~/.m2/repository/apt-cli-${APT_CLI_VERSION}.jar --url s3://r2cloud --component main --codename focal --gpg-keyname F2DCBFDCA5A70917   save --patterns ./*.deb
+        java -jar ~/.m2/repository/apt-cli-${APT_CLI_VERSION}.jar --url s3://r2cloud --component main --codename jammy --gpg-keyname F2DCBFDCA5A70917   save --patterns ./*.deb
