--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,7 @@ jobs:
         DATE=$(date '+%Y%m%d%H%M%S')
         APT_CLI_VERSION="1.8"
         echo "Version: ${DATE}" >> debian/DEBIAN/control
+        chmod 755 debian/DEBIAN/postinst
         dpkg-deb --build debian r2cloud-ui-${DATE}.deb
         mkdir -p ~/.m2/repository/
         [[ -f ~/.m2/repository/apt-cli-${APT_CLI_VERSION}.jar ]] || wget --no-clobber --quiet -O ~/.m2/repository/apt-cli-${APT_CLI_VERSION}.jar https://github.com/dernasherbrezon/apt-cli/releases/download/apt-cli-${APT_CLI_VERSION}/apt-cli.jar
