--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
         APT_CLI_VERSION="1.8"
         echo "Version: ${DATE}" >> debian/DEBIAN/control
         chmod 755 debian/DEBIAN/postinst
-        dpkg-deb --build debian r2cloud-ui-${DATE}.deb
+        dpkg-deb --compression=gzip --build debian r2cloud-ui-${DATE}.deb
         mkdir -p ~/.m2/repository/
         [[ -f ~/.m2/repository/apt-cli-${APT_CLI_VERSION}.jar ]] || wget --no-clobber --quiet -O ~/.m2/repository/apt-cli-${APT_CLI_VERSION}.jar https://github.com/dernasherbrezon/apt-cli/releases/download/apt-cli-${APT_CLI_VERSION}/apt-cli.jar
         java -jar ~/.m2/repository/apt-cli-${APT_CLI_VERSION}.jar --url s3://r2cloud --component main --codename r2cloud --gpg-keyname F2DCBFDCA5A70917  save --patterns ./*.deb
